--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link
-      href="
-		https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
-		"
+      href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
@@ -23,9 +21,7 @@
     <ul class="gallery"></ul>
     <script
       async
-      src="
-https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
-"
+      src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"
     ></script>
     <script src="./js/gallery.js" type="module"></script>
   </body>
